--- a/wp-content/themes/Moje_šablona/style/footer.css
+++ b/wp-content/themes/Moje_šablona/style/footer.css
@@ -3,12 +3,54 @@ footer{
     height: 200px;
     background-color: rgb(19, 18, 18);
     color: white;
+    position: relative;
+    overflow: hidden;
+
+    .wave {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 140px;
+        background: radial-gradient(circle at 50% 50%, #2e3e5e, #1c2538);
+        background-size: 200% 100%;
+        clip-path: path(
+          "M0,40 C150,120 350,-40 600,40 C850,80 1050,0 1300,40 C1550,80 1750,0 2000,40 L2000,0 L0,0 Z"
+        );
+        animation: waveMove 2s linear infinite;
+        opacity: 0.9;
+        z-index: 3;
+      }
+      
+        .wave::before,
+        .wave::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 140px;
+            background: inherit;
+            clip-path: inherit;
+      }
+      
+      .wave::before {
+        opacity: 0.5;
+        animation: moveWave 2.5s linear infinite reverse;
+      }
+      
+      .wave::after {
+        opacity: 0.3;
+        animation: moveWave 3s linear infinite;
+      }
 
     .wrapper{
         display: flex;
         flex-direction: column;
         max-width: 1300px;
         margin: auto;
+        position: relative;
+        z-index: 10;
 
         .wrapper-content{
             display: flex;
@@ -30,4 +72,19 @@ footer{
             }
         }
     }
+}
+
+
+@keyframes moveWave {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+
+@keyframes waveMove {
+    0% { background-position: 0 0; }
+    100% { background-position: -50% 0; }
 }
